=======
CHANGES
=======
0.4.8
=====
- orm
    - Fixed bug regarding inherit_condition passed
      with "A=B" versus "B=A" leading to errors
      [ticket:1039]

    - Changes made to new, dirty and deleted 
      collections in
      SessionExtension.before_flush() will take
      effect for that flush.

- mysql
    - Added MSMediumInteger type [ticket:1146].

- oracle
    - has_sequence() now takes schema name into account
      [ticket:1155]
    - added BFILE to the list of reflected types
      [ticket:1121]
      
0.4.7p1
=====
- orm 
    - Added "add()" and "add_all()" to scoped_session
      methods.  Workaround for 0.4.7:
      
        from sqlalchemy.orm.scoping import ScopedSession,\
        instrument
        setattr(
            ScopedSession, "add", instrument("add"))
        setattr(
            ScopedSession, "add_all", instrument("add_all"))

    - Fixed non-2.3 compatible usage of set() and generator
      expression within relation().

0.4.7
=====
- orm
    - The contains() operator when used with many-to-many
      will alias() the secondary (association) table so
      that multiple contains() calls will not conflict
      with each other [ticket:1058]

    - A critical fix to dynamic relations allows the 
      "modified" history to be properly cleared after
      a flush() (backported from 0.5).

    - added add() and add_all() methods to Session,
      establishing forwards compatibility with 0.5.
      
    - fixed bug preventing merge() from functioning in 
      conjunction with a comparable_property()

    - Query.count() will take single-table inheritance
      subtypes into account the same way row-based
      results do. [ticket:1008]

    - the enable_typechecks=False setting on relation()
      now only allows subtypes with inheriting mappers.  
      Totally unrelated types, or subtypes not set up with
      mapper inheritance against the target mapper are 
      still not allowed.
